--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.23"
+    "vue": "^3.5.23",
+    "@luna-park/plugin": "link:..\\core\\packages\\plugin"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
