--- a/package.json
+++ b/package.json
@@ -1,20 +1,39 @@
 {
   "name": "@luna-park/plugin-tailwind",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "private": false,
+  "description": "Tailwind CSS plugin for Luna Park",
+  "homepage": "https://luna-park.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lunapark"
+  },
+  "author": {
+    "name": "Luna Park",
+    "url": "https://luna-park.app"
+  },
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
+  "module": "./dist/index.js",
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
-    "dev": "vite build --watch",
     "build": "vite build",
+    "dev": "vite build --watch",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.23",
-    "@luna-park/plugin": "link:..\\core\\packages\\plugin"
+    "vue": "^3.5.23"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
+    "@luna-park/plugin": "^1.0.1",
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
