--- a/package.json
+++ b/package.json
@@ -1,58 +1,52 @@
 {
-  "name": "@luna-park/plugin-tailwind",
-  "version": "1.0.1",
-  "private": false,
-  "description": "Tailwind CSS plugin for Luna Park",
-  "keywords": [
-    "luna-park",
-    "tailwind",
-    "plugin"
-  ],
-  "homepage": "https://luna-park.app",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lunapark"
-  },
-  "author": {
-    "name": "Luna Park",
-    "url": "https://luna-park.app"
-  },
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js"
+    "name": "@luna-park/plugin-tailwind",
+    "version": "1.0.1",
+    "private": false,
+    "description": "Tailwind CSS plugin for Luna Park",
+    "keywords": [
+        "luna-park",
+        "plugin",
+        "tailwind"
+    ],
+    "homepage": "https://luna-park.app",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/lunapark"
+    },
+    "author": {
+        "name": "Luna Park",
+        "url": "https://luna-park.app"
+    },
+    "type": "module",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js"
+        }
+    },
+    "module": "./dist/index.js",
+    "files": [
+        "dist/**"
+    ],
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite build --watch",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "vue": "^3.5.24"
+    },
+    "devDependencies": {
+        "@luna-park/eslint-config": "^1.0.1",
+        "@luna-park/plugin": "^1.0.1",
+        "@types/node": "^24.10.0",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "@vue/tsconfig": "^0.8.1",
+        "eslint": "^9.39.1",
+        "globals": "^16.5.0",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.3",
+        "vite": "^7.2.2",
+        "vite-plugin-css-injected-by-js": "^3.5.2",
+        "vue-tsc": "^3.1.3"
     }
-  },
-  "module": "./dist/index.js",
-  "files": [
-    "dist/**"
-  ],
-  "scripts": {
-    "build": "vite build",
-    "dev": "vite build --watch",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.5.23"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.39.1",
-    "@luna-park/plugin": "^1.0.1",
-    "@types/node": "^24.10.0",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.39.1",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import-x": "^4.16.1",
-    "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-sort-keys-custom-order": "^2.2.1",
-    "eslint-plugin-vue": "^10.5.1",
-    "globals": "^16.4.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.3",
-    "vite": "^7.2.1",
-    "vite-plugin-css-injected-by-js": "^3.5.2",
-    "vue-tsc": "^3.1.3"
-  }
 }
